# Changelog
All notable changes to this project will be documented in this file.

## [1.0.0] - 2020-08-05
### Added
- Created Private Git Repo
- Created structure for plugin
- Include composer - autoload
- Create activation and deactivation hook
- Created uninstall file
- Drop database on plugin uninstall
- Enqueue class
- Enqueue admin scripts and styles
- Enqueue public scripts and styles 

### Changed
- 

### Removed
- 

### Fixed
- All script and style are tested and work

### Bugs
-

#####################################################################

## [1.0.0] - 2020-08-06
### Added
- Shortcode Form admin menu page
- Users list admin page
- Shortcode Example admin page
- [form_inquiry] Shortcode for the frontend form
- Created method loggedInUser() for checking and pulling automaticly user information

### Changed
- Prefix from Sf to Sfc
- Changed structure. Moved Admin and Public into includes

### Removed
-

### Fixed
-

### Bugs
-

#####################################################################